<resources>
    <string name="app_name">NavigationDrawer</string>
    <string name="home">Home</string>
    <string name="gallery">Gallery</string>
    <string name="tool">Tool</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="post">Post</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
</resources>