<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
   <item android:id="@+id/bottom_post"
       android:title="@string/post"
       android:icon="@drawable/ic_baseline_post"
       android:enabled="true"
       android:checked="true"
       android:iconTintMode="screen"/>

    <item android:id="@+id/bottom_search"
        android:title="@string/search"
        android:icon="@drawable/ic_baseline_search"
        android:enabled="true"
        android:checked="true"/>

    <item android:id="@+id/bottom_home"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_home"
        android:enabled="true"
        android:checked="true"/>

    <item android:id="@+id/bottom_favorite"
        android:title="@string/favorite"
        android:icon="@drawable/ic_baseline_favorite"
        android:enabled="true"
        android:checked="true"/>

    <item android:id="@+id/bottom_profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_baseline_profile"
        android:enabled="true"
        android:checked="true"/>

</menu>
